Fixed inner shadow having a gap on the top right

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_borders-gaps.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_borders-gaps.scss
@@ -51,7 +51,7 @@
 			margin-inline-start: var(--gap-size);
 		}
 		#TabsToolbar::before {
-			width: calc(100% - 8px);
+			width: calc(100% - 6px);
 			left: calc(var(--gap-size) + 1px);
 		}
 		#nav-bar,
